--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-websocket-client
-pandas
-numpy
+pandas==1.5.2
 prefect==2.7.7
 prefect-sqlalchemy==0.2.2
 prefect-gcp[cloud_storage]==0.2.3
@@ -9,9 +7,9 @@ pyarrow==10.0.1
 pandas-gbq==0.18.1
 psycopg2-binary==2.9.5
 sqlalchemy==1.4.46
-jupyter
-python-dotenv
-sodapy
+python-dotenv==1.0.0
+sodapy==2.2.0
+pydantic==1.10.11  #for predect downgrading the pydantic
 # -e .
 
 
