--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -19,10 +19,10 @@ seed-paths: ["dbt/seeds"]
 macro-paths: ["dbt/macros"]
 snapshot-paths: ["dbt/snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
+target-path: "dbt/target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
-  - "target"
-  - "dbt_packages"
+  - "dbt/target"
+  - "dbt/dbt_packages"
 
 
 # Configuring models
